<resources>
    <string name="app_name">MonuSense</string>
    <string name="title_activity_maps">Map</string>
    <string name="app_title_contributor">Become a contributor!</string>
    <string name="app_title_custodian">Become a custodian!</string>
    <string name="app_title_visitor">No, I am just a visitor</string>
    <string name="add_monument_label_name">Name</string>
    <string name="add_monument_name">Name of the monument</string>
    <string name="add_monument_label_description">Tell us something about it</string>
    <string name="add_monument_creator">Who created it?</string>
    <string name="add_monument_location_change">Modify</string>
    <string name="add_monument_button">Add</string>
    <string name="title_activity_login">Login</string>
    <string name="skip">Skip</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_logout">Log Out</string>
    <string name="desc_title">Description</string>
    <string name="action_posts">Were you here?</string>
    <string name="action_warnings">Do you see any warnings?</string>
    <string name="warnings_title">Warnings</string>
    <string name="unverified_warnings_title">Unverified Warnings</string>
    <string name="warnings_none">No warnings have been posted for this monument.</string>
    <string name="warning_new">Post a new warning</string>
    <string name="warning_desc">What is the problem here?</string>
    <string name="posts_title">Posts</string>
    <string name="post_new">Do you have anything to say about this place?</string>
    <string name="posts_none">Noone has said anything about this monument yet.</string>
    <string name="action_verify">Verify</string>
    <string name="action_false">False alarm</string>
    <string name="no_warnings_to_verify">You have to become a custodian to see the unverified warnings for your monument.</string>
    <string name="provide_image">Monument Photo</string>
    <string name="provide_noise">Please record the surrounding noise</string>
    <string name="expertise_level">My expertise</string>
    <string name="my_monument">My monumnent</string>
    <string name="add_data">Add additional data</string>
    <string name="add_info">Add information</string>
    <string name="no_expertise">Become a custodian to gain expertise levels.</string>
    <string name="no_monument">Become a custodian and add your own monument.</string>
</resources>
