<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.nerisa.thesis.activity.PostsActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:text="Hello"
                android:textColor="@color/colorTitle"
                android:textSize="@dimen/header" />


            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/ic_location"
                android:gravity="center"
                android:textColor="@color/colorSubtitle"
                android:textSize="@dimen/subtitle" />

            <TextView
                android:id="@+id/creator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address"
                android:layout_marginLeft="16dp"
                android:text="TextView"
                android:textColor="@color/colorSubtitle"
                android:textSize="@dimen/subtitle" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/posts_title"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/header2" />

        <TextView
            android:id="@+id/no_post_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/posts_none"
            android:textColor="@color/colorSubtitle" />

        <RelativeLayout
            android:id="@+id/posts_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/post_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/post_new"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/header2" />

        <EditText
            android:id="@+id/new_post_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/warning_desc" />
        <Button
            android:id="@+id/post_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:onClick="addPost"
            android:text="@string/add_monument_button" />
    </LinearLayout>
</ScrollView>