<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.nerisa.thesis.activity.WarningActivity">

        <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop" />


        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:background="#FFF"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="5dp"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/header" />


        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:background="#FFF"
            android:drawableLeft="@drawable/ic_location"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="16dp"
            android:paddingTop="5dp"
            android:textColor="@color/colorSubtitle"
            android:textSize="@dimen/subtitle"
            android:textStyle="italic" />

        <!--</RelativeLayout>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/layoutBackground"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/customborder_shadow"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/warnings_title"
                    android:textColor="@color/colorTitle"
                    android:textSize="@dimen/header2" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/layoutBackground" />

                <TextView
                    android:id="@+id/no_warning_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/warnings_none"
                    android:textColor="@color/colorSubtitle" />

                <!--<RelativeLayout-->
                <!--android:id="@+id/warnings_container"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--app:layout_behavior="@string/appbar_scrolling_view_behavior">-->

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/warning_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/cardBackground"
                    android:padding="5dp"
                    android:scrollbars="horizontal" />
            </LinearLayout>

            <!--</RelativeLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/customborder_shadow"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/warning_new"
                    android:textColor="@color/colorTitle"
                    android:textSize="@dimen/header2" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/layoutBackground" />

                <EditText
                    android:id="@+id/new_warning_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/warning_desc"
                    android:background="@drawable/customborder"
                    android:layout_marginTop="16dp"/>

                <LinearLayout
                    android:id="@+id/warning_image_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/new_warning_image"
                        android:layout_width="214dp"
                        android:layout_height="wrap_content"
                        android:maxWidth="100dp"
                        android:minHeight="100dp"
                        android:src="@android:drawable/ic_menu_report_image" />

                    <ImageButton
                        android:id="@+id/monument_photos"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:onClick="selectImage"
                        android:src="@android:drawable/ic_menu_camera" />
                </LinearLayout>

                <Button
                    android:id="@+id/warning_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:onClick="addWarning"
                    android:text="@string/add_monument_button" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>


